added s_aux and x_aux

--- a/dense_kkt/Makefile
+++ b/dense_kkt/Makefile
@@ -34,6 +34,7 @@ OBJS +=
 endif
 
 OBJS += d_aux.o
+OBJS += s_aux.o
 
 obj: $(OBJS)
 
@@ -41,3 +42,5 @@ clean:
 	rm -f *.o
 	rm -f *.s
 
+d_aux.o: d_aux.c x_aux.c
+s_aux.o: s_aux.c x_aux.c
