--- a/ocp_kkt/Makefile
+++ b/ocp_kkt/Makefile
@@ -33,8 +33,8 @@ ifeq ($(TARGET), GENERIC)
 OBJS +=
 endif
 
-OBJS += d_aux.o
-OBJS += d_cond.o d_part_cond.o
+OBJS += d_aux.o d_cond.o d_part_cond.o
+OBJS += s_aux.o
 
 obj: $(OBJS)
 
@@ -42,3 +42,5 @@ clean:
 	rm -f *.o
 	rm -f *.s
 
+d_aux.o: d_aux.c x_aux.c
+s_aux.o: s_aux.c x_aux.c
