--- a/ocp_kkt/Makefile
+++ b/ocp_kkt/Makefile
@@ -33,7 +33,7 @@ ifeq ($(TARGET), GENERIC)
 OBJS +=
 endif
 
-OBJS += d_aux.o d_cond.o d_part_cond.o
+OBJS += d_aux.o d_kkt_ocp_qp.o d_ipm_hard_ocp_qp.o d_cond.o d_part_cond.o
 OBJS += s_aux.o
 
 obj: $(OBJS)
