added residuals for ocp qp for ng>0

--- a/test_problems/Makefile
+++ b/test_problems/Makefile
@@ -50,9 +50,9 @@ ifeq ($(REF_BLAS), ATLAS)
 LIBS += /opt/atlas/lib/liblapack.a /opt/atlas/lib/libcblas.a /opt/atlas/lib/libf77blas.a /opt/atlas/lib/libatlas.a -lgfortran -lm
 endif
 
-OBJS_TEST = tools.o test_d_cond.o
+#OBJS_TEST = tools.o test_d_cond.o
 #OBJS_TEST = test_d_dense.o
-#OBJS_TEST = tools.o test_d_ocp.o
+OBJS_TEST = tools.o test_d_ocp.o
 
 obj: $(OBJS_TEST)
 	$(CC) -o test.out $(OBJS_TEST) -L. libhpipm.a $(LIBS) #-pg
