--- a/dense_qp/Makefile
+++ b/dense_qp/Makefile
@@ -34,7 +34,7 @@ OBJS +=
 endif
 
 OBJS += d_dense_qp.o d_dense_qp_sol.o d_dense_qp_kkt.o d_dense_qp_ipm_hard.o
-OBJS += s_dense_qp.o s_dense_qp_sol.o
+OBJS += s_dense_qp.o s_dense_qp_sol.o s_dense_qp_kkt.o s_dense_qp_ipm_hard.o
 
 obj: $(OBJS)
 
@@ -46,3 +46,7 @@ d_dense_qp.o: d_dense_qp.c x_dense_qp.c
 s_dense_qp.o: s_dense_qp.c x_dense_qp.c
 d_dense_qp_sol.o: d_dense_qp_sol.c x_dense_qp_sol.c
 s_dense_qp_sol.o: s_dense_qp_sol.c x_dense_qp_sol.c
+d_dense_qp_kkt.o: d_dense_qp_kkt.c x_dense_qp_kkt.c
+s_dense_qp_kkt.o: s_dense_qp_kkt.c x_dense_qp_kkt.c
+d_dense_qp_ipm_hard.o: d_dense_qp_ipm_hard.c x_dense_qp_ipm_hard.c
+s_dense_qp_ipm_hard.o: s_dense_qp_ipm_hard.c x_dense_qp_ipm_hard.c
