added s_ocp qp & ipm

--- a/ocp_qp/Makefile
+++ b/ocp_qp/Makefile
@@ -34,7 +34,7 @@ OBJS +=
 endif
 
 OBJS += d_ocp_qp.o d_ocp_qp_sol.o d_ocp_qp_kkt.o d_ocp_qp_ipm_hard.o
-OBJS += s_ocp_qp.o s_ocp_qp_sol.o
+OBJS += s_ocp_qp.o s_ocp_qp_sol.o s_ocp_qp_kkt.o s_ocp_qp_ipm_hard.o
 
 obj: $(OBJS)
 
@@ -46,3 +46,7 @@ d_ocp_qp.o: d_ocp_qp.c x_ocp_qp.c
 s_ocp_qp.o: s_ocp_qp.c x_ocp_qp.c
 d_ocp_qp_sol.o: d_ocp_qp_sol.c x_ocp_qp_sol.c
 s_ocp_qp_sol.o: s_ocp_qp_sol.c x_ocp_qp_sol.c
+d_ocp_qp_kkt.o: d_ocp_qp_kkt.c x_ocp_qp_kkt.c
+s_ocp_qp_kkt.o: s_ocp_qp_kkt.c x_ocp_qp_kkt.c
+d_ocp_qp_ipm_hard.o: d_ocp_qp_ipm_hard.c x_ocp_qp_ipm_hard.c
+s_ocp_qp_ipm_hard.o: s_ocp_qp_ipm_hard.c x_ocp_qp_ipm_hard.c
