--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,34 +72,34 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -fPIC")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${BLASFEO_PATH}/include")
 
 #
-if(${REF_BLAS} EQUAL 0)
+if(${REF_BLAS} MATCHES 0)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ")
-endif(${REF_BLAS} EQUAL 0)
-if(${REF_BLAS} EQUAL OPENBLAS)
+endif(${REF_BLAS} MATCHES 0)
+if(${REF_BLAS} MATCHES OPENBLAS)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DREF_BLAS_OPENBLAS -I/opt/openblas/include")
-endif(${REF_BLAS} EQUAL OPENBLAS)
-if(${REF_BLAS} EQUAL BLIS)
+endif(${REF_BLAS} MATCHES OPENBLAS)
+if(${REF_BLAS} MATCHES BLIS)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DREF_BLAS_BLIS -std=c99")
-endif(${REF_BLAS} EQUAL BLIS)
-if(${REF_BLAS} EQUAL NETLIB)
+endif(${REF_BLAS} MATCHES BLIS)
+if(${REF_BLAS} MATCHES NETLIB)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DREF_BLAS_NETLIB")
-endif(${REF_BLAS} EQUAL NETLIB)
-if(${REF_BLAS} EQUAL MKL)
+endif(${REF_BLAS} MATCHES NETLIB)
+if(${REF_BLAS} MATCHES MKL)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DREF_BLAS_MKL -m64 -I/opt/intel/mkl/include")
-endif(${REF_BLAS} EQUAL MKL)
-if(${REF_BLAS} EQUAL ATLAS)
+endif(${REF_BLAS} MATCHES MKL)
+if(${REF_BLAS} MATCHES ATLAS)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DREF_BLAS_ATLAS")
-endif(${REF_BLAS} EQUAL ATLAS)
+endif(${REF_BLAS} MATCHES ATLAS)
 
 #
-if(${RUNTIME_CHECKS} EQUAL 1)
+if(${RUNTIME_CHECKS} MATCHES 1)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DRUNTIME_CHECKS")
-endif(${RUNTIME_CHECKS} EQUAL 1)
+endif(${RUNTIME_CHECKS} MATCHES 1)
 
 # architecture-specific flags
-if(${TARGET} EQUAL GENERIC)
+if(${TARGET} MATCHES GENERIC)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DTARGET_GENERIC")
-endif(${TARGET} EQUAL GENERIC)
+endif(${TARGET} MATCHES GENERIC)
 
 
 
@@ -144,6 +144,7 @@ set(HPIPM_SRC ${DENSE_QP_SRC} ${OCP_QP_SRC} ${CORE_QP_SRC} ${COND_SRC})
 # add library
 add_library(hpipm ${HPIPM_SRC})
 #add_library(hpipm SHARED ${HPIPM_SRC})
+
 #target_link_libraries(hpipm)
 
 # test problems
