Change CMake to integrate with acados

--- a/test_problems/CMakeLists.txt
+++ b/test_problems/CMakeLists.txt
@@ -26,10 +26,10 @@
 ###################################################################################################
 
 add_executable(dense_qp test_d_dense.c)
-target_link_libraries(dense_qp hpipm ${BLASFEO_PATH}/lib/libblasfeo.a m)
+target_link_libraries(dense_qp hpipm blasfeo m)
 
 add_executable(ocp_qp test_d_ocp.c tools.c)
-target_link_libraries(ocp_qp hpipm ${BLASFEO_PATH}/lib/libblasfeo.a m)
+target_link_libraries(ocp_qp hpipm blasfeo m)
 
 add_executable(cond test_d_cond.c tools.c)
-target_link_libraries(cond hpipm ${BLASFEO_PATH}/lib/libblasfeo.a m)
+target_link_libraries(cond hpipm blasfeo m)
