debugging blasfeo single lib8

--- a/test_problems/Makefile
+++ b/test_problems/Makefile
@@ -50,13 +50,11 @@ ifeq ($(REF_BLAS), ATLAS)
 LIBS += /opt/atlas/lib/liblapack.a /opt/atlas/lib/libcblas.a /opt/atlas/lib/libf77blas.a /opt/atlas/lib/libatlas.a -lgfortran -lm
 endif
 
-# double precision tests
 #OBJS_TEST = d_tools.o test_d_cond.o
 #OBJS_TEST = test_d_dense.o
-OBJS_TEST = d_tools.o test_d_ocp.o
-# single precision tests
 #OBJS_TEST = test_s_dense.o
-#OBJS_TEST = s_tools.o test_s_ocp.o
+#OBJS_TEST = d_tools.o test_d_ocp.o
+OBJS_TEST = s_tools.o test_s_ocp.o
 
 obj: $(OBJS_TEST)
 	$(CC) -o test.out $(OBJS_TEST) -L. libhpipm.a $(LIBS) #-pg
