remove compiler flags that msvc does not have

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,11 @@ set(RUNTIME_CHECKS 0)
 set(CMAKE_C_FLAGS "")
 
 # optimization flags
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -fPIC")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
+if(CMAKE_COMPILER_ID MATCHES "GNU" OR CMAKE_COMPILER_ID MATCHES "Clang")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+endif()
+
 #
 if(${REF_BLAS} MATCHES 0)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ")
