--- a/test_problems/Makefile
+++ b/test_problems/Makefile
@@ -56,6 +56,7 @@ endif
 OBJS_TEST = d_tools.o test_d_ocp.o
 #OBJS_TEST = s_tools.o test_s_ocp.o
 #OBJS_TEST = d_tools.o test_m_ocp.o
+#OBJS_TEST = d_tools.o test_d_tree_ocp.o
 
 obj: $(OBJS_TEST)
 	$(CC) -o test.out $(OBJS_TEST) -L. libhpipm.a $(LIBS) #-pg
