--- a/tree_ocp_qp/Makefile
+++ b/tree_ocp_qp/Makefile
@@ -43,3 +43,11 @@ clean:
 	rm -f *.o
 	rm -f *.s
 
+d_tree_ocp_qp.o: d_tree_ocp_qp.c x_tree_ocp_qp.c
+s_tree_ocp_qp.o: s_tree_ocp_qp.c x_tree_ocp_qp.c
+d_tree_ocp_qp_sol.o: d_tree_ocp_qp_sol.c x_tree_ocp_qp_sol.c
+s_tree_ocp_qp_sol.o: s_tree_ocp_qp_sol.c x_tree_ocp_qp_sol.c
+d_tree_ocp_qp_kkt.o: d_tree_ocp_qp_kkt.c x_tree_ocp_qp_kkt.c
+s_tree_ocp_qp_kkt.o: s_tree_ocp_qp_kkt.c x_tree_ocp_qp_kkt.c
+d_tree_ocp_qp_ipm_hard.o: d_tree_ocp_qp_ipm_hard.c x_tree_ocp_qp_ipm_hard.c
+s_tree_ocp_qp_ipm_hard.o: s_tree_ocp_qp_ipm_hard.c x_tree_ocp_qp_ipm_hard.c
