--- a/dense_qp/Makefile
+++ b/dense_qp/Makefile
@@ -33,8 +33,8 @@ ifeq ($(TARGET), GENERIC)
 OBJS +=
 endif
 
-OBJS += d_dense_qp.o d_dense_qp_sol.o d_dense_qp_kkt.o d_dense_qp_ipm_hard.o
-OBJS += s_dense_qp.o s_dense_qp_sol.o s_dense_qp_kkt.o s_dense_qp_ipm_hard.o
+OBJS += d_dense_qp.o d_dense_qp_sol.o d_dense_qp_kkt.o d_dense_qp_ipm.o
+OBJS += s_dense_qp.o s_dense_qp_sol.o s_dense_qp_kkt.o s_dense_qp_ipm.o
 
 obj: $(OBJS)
 
@@ -48,5 +48,5 @@ d_dense_qp_sol.o: d_dense_qp_sol.c x_dense_qp_sol.c
 s_dense_qp_sol.o: s_dense_qp_sol.c x_dense_qp_sol.c
 d_dense_qp_kkt.o: d_dense_qp_kkt.c x_dense_qp_kkt.c
 s_dense_qp_kkt.o: s_dense_qp_kkt.c x_dense_qp_kkt.c
-d_dense_qp_ipm_hard.o: d_dense_qp_ipm_hard.c x_dense_qp_ipm_hard.c
-s_dense_qp_ipm_hard.o: s_dense_qp_ipm_hard.c x_dense_qp_ipm_hard.c
+d_dense_qp_ipm.o: d_dense_qp_ipm.c x_dense_qp_ipm.c
+s_dense_qp_ipm.o: s_dense_qp_ipm.c x_dense_qp_ipm.c
