--- a/test_problems/Makefile
+++ b/test_problems/Makefile
@@ -61,10 +61,10 @@ OBJS_TEST = d_tools.o test_d_ocp.o
 #OBJS_TEST = d_tools.o test_d_tree_ocp.o
 #OBJS_TEST = s_tools.o test_s_tree_ocp.o
 #OBJS_TEST = d_tools.o test_d_sim.o
-#OBJS_TEST = d_tools.o test_d_sqp.o
+#OBJS_TEST = d_tools.o test_d_nlp_sqp.o
 #OBJS_TEST = d_tools.o test_d_nlp_ipm.o
-#OBJS_TEST = test_van_der_pol_ipm.o
 #OBJS_TEST = test_van_der_pol_sqp.o
+#OBJS_TEST = test_van_der_pol_ipm.o
 
 obj: $(OBJS_TEST)
 	$(CC) -o test.out $(OBJS_TEST) -L. libhpipm.a $(LIBS) #-pg
