--- a/experimental/andrea/casadi_vde_interface/Makefile
+++ b/experimental/andrea/casadi_vde_interface/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -O3
-main: 	main.o pendulum_model.o vde_forw_pendulum.o
-	$(CC) -o main main.o pendulum_model.o vde_forw_pendulum.o -lm -I.
+main: 	main.o model.o vde_forw_model.o
+	$(CC) -o main main.o model.o vde_forw_model.o -lm -I.
 
 clean:
-	rm main.o pendulum_model.o vde_forw_pendulum.o
+	rm main.o model.o vde_forw_model.o
