update of cmake (not nlp stuff)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,8 @@
 cmake_minimum_required(VERSION 2.8.11)
 project(hpipm)
 
+set(CMAKE_VERBOSE_MAKEFILE ON)
+
 # Target architecture
 set(TARGET GENERIC)
 
@@ -95,6 +97,15 @@ if(${TARGET} MATCHES GENERIC)
 endif(${TARGET} MATCHES GENERIC)
 
 # source files
+# cond
+file(GLOB COND_SRC
+	${PROJECT_SOURCE_DIR}/cond/d_cond.c
+	${PROJECT_SOURCE_DIR}/cond/d_cond_aux.c
+	${PROJECT_SOURCE_DIR}/cond/d_part_cond.c
+	${PROJECT_SOURCE_DIR}/cond/s_cond.c
+	${PROJECT_SOURCE_DIR}/cond/s_cond_aux.c
+	${PROJECT_SOURCE_DIR}/cond/s_part_cond.c
+	)
 # dense qp
 file(GLOB DENSE_QP_SRC
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qp.c
@@ -106,6 +117,13 @@ file(GLOB DENSE_QP_SRC
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp_kkt.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp_ipm_hard.c
 	)
+# core ipm
+file(GLOB IPM_CORE_SRC
+	${PROJECT_SOURCE_DIR}/ipm_core/d_core_qp_ipm_hard_aux.c
+	${PROJECT_SOURCE_DIR}/ipm_core/d_core_qp_ipm_hard.c
+	${PROJECT_SOURCE_DIR}/ipm_core/s_core_qp_ipm_hard_aux.c
+	${PROJECT_SOURCE_DIR}/ipm_core/s_core_qp_ipm_hard.c
+	)
 # ocp qp
 file(GLOB OCP_QP_SRC
 	${PROJECT_SOURCE_DIR}/ocp_qp/d_ocp_qp.c
@@ -116,25 +134,9 @@ file(GLOB OCP_QP_SRC
 	${PROJECT_SOURCE_DIR}/ocp_qp/s_ocp_qp_sol.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/s_ocp_qp_kkt.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/s_ocp_qp_ipm_hard.c
-	${PROJECT_SOURCE_DIR}/ocp_qp/m_ocp_qp.c
-	${PROJECT_SOURCE_DIR}/ocp_qp/m_ocp_qp_kkt.c
-	${PROJECT_SOURCE_DIR}/ocp_qp/m_ocp_qp_ipm_hard.c
-	)
-# core ipm
-file(GLOB CORE_IPM_SRC
-	${PROJECT_SOURCE_DIR}/ipm_core/d_core_qp_ipm_hard_aux.c
-	${PROJECT_SOURCE_DIR}/ipm_core/d_core_qp_ipm_hard.c
-	${PROJECT_SOURCE_DIR}/ipm_core/s_core_qp_ipm_hard_aux.c
-	${PROJECT_SOURCE_DIR}/ipm_core/s_core_qp_ipm_hard.c
-	)
-# cond
-file(GLOB COND_SRC
-	${PROJECT_SOURCE_DIR}/cond/d_cond.c
-	${PROJECT_SOURCE_DIR}/cond/d_cond_aux.c
-	${PROJECT_SOURCE_DIR}/cond/d_part_cond.c
-	${PROJECT_SOURCE_DIR}/cond/s_cond.c
-	${PROJECT_SOURCE_DIR}/cond/s_cond_aux.c
-	${PROJECT_SOURCE_DIR}/cond/s_part_cond.c
+#	${PROJECT_SOURCE_DIR}/ocp_qp/m_ocp_qp.c
+#	${PROJECT_SOURCE_DIR}/ocp_qp/m_ocp_qp_kkt.c
+#	${PROJECT_SOURCE_DIR}/ocp_qp/m_ocp_qp_ipm_hard.c
 	)
 # tree qp
 file(GLOB TREE_OCP_QP_SRC
@@ -149,11 +151,11 @@ file(GLOB TREE_OCP_QP_SRC
 	${PROJECT_SOURCE_DIR}/tree_ocp_qp/s_tree_ocp_qp_ipm_hard.c
 	)
 
-set(HPIPM_SRC ${DENSE_QP_SRC} ${OCP_QP_SRC} ${CORE_IPM_SRC} ${COND_SRC} ${TREE_OCP_QP_SRC})
+set(HPIPM_SRC ${COND_SRC} ${DENSE_QP_SRC} ${IPM_CORE_SRC} ${OCP_QP_SRC} ${TREE_OCP_QP_SRC})
 
 add_library(hpipm ${HPIPM_SRC})
 target_include_directories(hpipm PUBLIC include ${BLASFEO_INCLUDE_DIR})
 target_link_libraries(hpipm blasfeo)
 
 # test problems
-add_subdirectory(test_problems)
+#add_subdirectory(test_problems)
