--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ set(REF_BLAS 0)
 # BLASFEO
 if(NOT TARGET blasfeo)
 	# BLASFEO installation directory
-	set(BLASFEO_PATH /home/bnovoselnik/local/)
+	set(BLASFEO_PATH /opt/blasfeo)
 	add_library(blasfeo STATIC IMPORTED)
 	set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.a)
 	set(BLASFEO_INCLUDE_DIR ${BLASFEO_PATH}/include)
