--- a/dense_qp/Makefile
+++ b/dense_qp/Makefile
@@ -33,8 +33,18 @@ ifeq ($(TARGET), GENERIC)
 OBJS +=
 endif
 
-OBJS += d_dense_qp.o d_dense_qp_sol.o d_dense_qp_kkt.o d_dense_qp_ipm.o
-OBJS += s_dense_qp.o s_dense_qp_sol.o s_dense_qp_kkt.o s_dense_qp_ipm.o
+# double
+OBJS += d_dense_qp_dim.o 
+OBJS += d_dense_qp.o 
+OBJS += d_dense_qp_sol.o 
+OBJS += d_dense_qp_kkt.o 
+OBJS += d_dense_qp_ipm.o
+# single
+OBJS += s_dense_qp_dim.o 
+OBJS += s_dense_qp.o 
+OBJS += s_dense_qp_sol.o 
+OBJS += s_dense_qp_kkt.o 
+OBJS += s_dense_qp_ipm.o
 
 obj: $(OBJS)
 
@@ -42,6 +52,8 @@ clean:
 	rm -f *.o
 	rm -f *.s
 
+d_dense_qp_dim.o: d_dense_qp_dim.c x_dense_qp_dim.c
+s_dense_qp_dim.o: s_dense_qp_dim.c x_dense_qp_dim.c
 d_dense_qp.o: d_dense_qp.c x_dense_qp.c
 s_dense_qp.o: s_dense_qp.c x_dense_qp.c
 d_dense_qp_sol.o: d_dense_qp_sol.c x_dense_qp_sol.c
