--- a/benchmark/Makefile
+++ b/benchmark/Makefile
@@ -27,35 +27,29 @@
 
 include ../Makefile.rule
 
-LIBS =
 
-LIBS += $(BLASFEO_PATH)/lib/libblasfeo.a -lm
 
-OBJS_TEST =
-#OBJS_TEST = d_tools.o test_d_cond.o
-#OBJS_TEST = d_tools.o test_d_part_cond.o
-#OBJS_TEST = test_d_dense.o
-#OBJS_TEST = test_s_dense.o
-OBJS_TEST += test_d_benchmark.o
-#OBJS_TEST = d_tools.o test_d_ocp2.o
-#OBJS_TEST = s_tools.o test_s_ocp.o
-#OBJS_TEST = d_tools.o test_m_ocp.o
-#OBJS_TEST = d_tools.o test_d_tree_ocp.o
-#OBJS_TEST = s_tools.o test_s_tree_ocp.o
-#OBJS_TEST = d_tools.o test_d_sim.o
-#OBJS_TEST = d_tools.o test_d_nlp_sqp.o
-#OBJS_TEST = d_tools.o test_d_nlp_ipm.o
-#OBJS_TEST = test_van_der_pol_sqp.o
-#OBJS_TEST = test_van_der_pol_ipm.o
-#OBJS_TEST = test_van_der_pol_hyb.o
-#OBJS_TEST = pendulum/vde_forw_model.o test_d_pendulum_sqp.o
-#OBJS_TEST = pendulum/vde_forw_model.o test_d_pendulum_ipm.o
-#OBJS_TEST = pendulum/ode_model.o pendulum/vde_forw_model.o pendulum/vde_adj_model.o test_d_pendulum_hyb.o
+LIBS = $(BLASFEO_PATH)/lib/libblasfeo.a -lm
+
+
+
+OBJS_TEST = test_d_benchmark.o
+
+
 
 obj: $(OBJS_TEST)
 	$(CC) -o test.out $(OBJS_TEST) -L. ../libhpipm.a $(LIBS) #-pg
 
+download_problem_data:
+	./fetch_cpp_data
+
+run:
+	./test.out
+
 clean:
 	rm -f *.o
 	rm -f test.out
-	rm -f libhpipm.a
+
+deep_clean: clean
+	rm -rf oqp/
+	rm -rf problems/
